first design stuff

--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Meta data
-title: 'Chopstick'
+title: 'Klimop: onafhankelijke Freinetbasisschool Oostkamp'
 author: ''
-description: 'Chopstick is a framework based on the ITCSS architecture and a series of principles. It creates a structure to easily set-up and build bespoke web projects.'
+description: 'Klimop is een onafhankelijke en pluralistische freinetschool. We bieden kinderen iets moois aan op een minder gebruikelijke manier! En dit met klassen in een prachtig Kasteel op een uniek Kasteeldomein van 4 ha in Oostkamp'
 
 # Site navigation
 navigation:
