--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "chopstick-sass": "^1.0.1",
     "jquery": "^3.1.0",
     "jquery.stellar": "^0.6.2",
+    "scrollmagic": "^2.0.5",
     "svgxuse": "^1.1.22"
   }
 }
