first steps to animating pictures

--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "blazy": "^1.8.2",
     "chopstick-sass": "^1.0.1",
+    "gsap": "^1.19.0",
     "jquery": "^3.1.0",
     "jquery.stellar": "^0.6.2",
     "scrollmagic": "^2.0.5",
